fix: cards lined up with all elements on mobile

--- a/app/(pages)/(index-page)/event/_components/Prizes/_components/PrizeCard.module.scss
+++ b/app/(pages)/(index-page)/event/_components/Prizes/_components/PrizeCard.module.scss
@@ -14,7 +14,7 @@
 
   @include mixins.phone {
     padding: 12px;
-    width: 90vw;
+    width: 80vw;
   }
 }
 .content {
